// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Popover ClickSuccessivo 1`] = `
<div>
  <div>
    <button
      class="btn btn-danger"
      tabindex="0"
    >
      Popover richiudibile
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Popover Direzioni 1`] = `
<div>
  <div
    class="d-flex flex-column"
  >
    <div
      class="mx-auto align-self-center p-2"
    >
      <span>
        <button
          class="me-1 btn btn-secondary"
          type="button"
        >
          Popover 
          a sinistra
        </button>
      </span>
    </div>
    <div
      class="mx-auto align-self-center p-2"
    >
      <span>
        <button
          class="me-1 btn btn-secondary"
          type="button"
        >
          Popover 
          a destra
        </button>
      </span>
    </div>
    <div
      class="mx-auto align-self-center p-2"
    >
      <span>
        <button
          class="me-1 btn btn-secondary"
          type="button"
        >
          Popover 
          in alto
        </button>
      </span>
    </div>
    <div
      class="mx-auto align-self-center p-2"
    >
      <span>
        <button
          class="me-1 btn btn-secondary"
          type="button"
        >
          Popover 
          in basso
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Popover ElementiDisabilitati 1`] = `
<div>
  <span>
    <button
      aria-disabled="true"
      class="btn btn-primary disabled"
      disabled=""
      style="pointer-events: none;"
    >
      Popover disabilitato
    </button>
  </span>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Popover Example 1`] = `
<div>
  <div>
    <button
      class="btn btn-danger btn-lg"
      type="button"
    >
      Clicca per attivare/disattivare il popover
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Popover ModalitàHover 1`] = `
<div>
  <div>
    <button
      class="btn btn-secondary"
    >
      Apertura in Hover
    </button>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Popover TitoloIconaLink 1`] = `
<div>
  <div>
    <button
      class="btn btn-secondary"
      type="button"
    >
      Popover con icona e link
    </button>
  </div>
</div>
`;
